--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
 <head>
 	<title>"The" Tyler Clark | Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400i,600,800" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header>
 		<nav class="nav">
-			<a class= 'active' href='index.html'>Portfolio</a>
-			<a href='about.html'>About T</a>
+			<a href='index.html'>Portfolio</a>
+			<a class= 'active' href='about.html'>About T</a>
 		</nav>
 		<h1 class="heading">"The" Tyler Clark</h1>
 	</header>
