--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>"The" Tyler Clark | Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400i,600,800" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -15,31 +16,35 @@
 	</header>
 	<main id="index_main">
 		<ul id="resume">
-			<li class="resume_section"><h2>Experience</h2></li>
-				<ul>
-					<li><p>I recently started a Web Development Immersive course at General Assembly, where I am learning HTML, CSS, JavaScript, and probably some other things! During my spare time, I enjoy senior water aerobics, pickling, and spending time with my goldfish, Jerry.</p></li>
-				</ul>
+			<li class="resume_section">
+				<h2>Experience</h2>
+				<p>I recently started a Web Development Immersive course at General Assembly, where I am learning HTML, CSS, JavaScript, and probably some other things! During my spare time, I enjoy senior water aerobics, pickling, and spending time with my goldfish, Jerry.</p>
+			</li>
 			
-			<li class="resume_section"><h2>Relevant Experience</h2></li>
+			<li class="resume_section">
+				<h2>Relevant Experience</h2>
+			</li>
 				<ul id="experience">
-					<li>Web Developer, Relaxr 2017 - present</li>
-						<ul class="prior_job">
-							<li class="resume_exp_desc">Developed a multi-column layout blog, landing page, and contact forms that render on mobile devices.</li>
-							<li><img class="project_image" src="images/relaxr-deliverable.png"></li>
-						</ul>
-					<li>Web Developer, Startup Matchmaker 2017 - present</li>
-						<ul class="prior_job">
-							<li class="resume_exp_desc">Used a design team's wireframes to develop this company's responsive homepage.</li>
-							<li><img class="project_image" src="images/startup-matchmaker-deliverable.png"></li>
-						</ul>
-					<li>Web Developer, CitiPix 2017 – present</li>
-						<ul class="prior_job">
-							<li class="resume_exp_desc">Built web app prototype that allows users to store and quickly retrieve photos using keywords.</li>
-							<li><img class="project_image" src="images/citipix-deliverable.png"></li>
-						</ul>
+					<li class="job_title">
+						<h4>Web Developer, Relaxr 2017 - present.</h4>
+						<p class="role_desc">Developed a multi-column layout blog, landing page, and contact forms that render on mobile devices.</p>
+						<img class="project_image" src="images/relaxr-deliverable.png">
+					</li>
+					<li class="job_title">
+						<h4>Web Developer, Startup Matchmaker 2017 - present</h4>
+						<p class="role_desc">Used a design team's wireframes to develop this company's responsive homepage.</p>
+						<img class="project_image" src="images/startup-matchmaker-deliverable.png">
+					</li>
+					<li class="job_title">
+						<h4>Web Developer, CitiPix 2017 – present</h4>
+						<p class="role_desc">Built web app prototype that allows users to store and quickly retrieve photos using keywords.</p>
+						<img class="project_image" src="images/citipix-deliverable.png">
+					</li>
 				</ul>
 		
-			<li class="resume_section"><h2>EDUCATION</h2></li>
+			<li class="resume_section">
+				<h2>EDUCATION</h2>
+			</li>
 				<ul id="education">
 					<li>General Assembly — WDI 2017</li>
 					<li>College of Soft Knocks — B.S. 2009</li>
